<resources>
    <string name="app_name">MyTaste</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for fragment_details -->
    <string name="detail_name_fragment">Nom du restaurant : </string>
    <string name="detail_address_fragment">Adresse : </string>
    <string name="detail_description_fragment">Description : </string>
    <string name="detail_contact_fragment">Contacter : </string>
    <string name="detail_email_fragment">Mail : </string>
    <string name="detail_website_fragment">Site : </string>
    <string name="detail_phone_fragment">Appeler : </string>
    <string name="restaurant_name">Nom du restaurant</string>
    <string name="restaurant_address">Adresse du restaurant</string>
    <string name="restaurant_description">Description du restaurant</string>
    <string name="restaurant_email">Email du restaurant</string>
    <string name="restaurant_website">Site internet du restaurant</string>
    <string name="restaurant_phone_number">Téléphone du restaurant</string>

    <!-- String used for activity_main -->
    <string name="disconnect_button">Déconnexion</string>
    <string name="go_map_button">Voir la carte</string>
    <string name="find_my_restaurants">Trouver les restaurants autour de moi</string>
    <string name="noAccountText">Pas de compte? <b>Inscris-toi></b></string>

    <!-- String used for activity_login -->
    <string name="connexion">Connexion</string>
    <string name="description_login_text">Connectez vous à votre compte</string>
    <string name="submit_button_connection">Se connecter</string>
    <string name="create_account_proposition">Pas de compte?<b>S'inscrire></b></string>
    <string name="email_input">Email</string>
    <string name="password_input">Mot de Passe</string>

    <!-- String used for sing_up_activity -->
    <string name="inscriotion">Inscription</string>
    <string name="description_sing_up_text">Créer un nouveau compte</string>
    <string name="submit_button_sing_up">S\'inscrire</string>
</resources>